# specializer

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yml
src/: api.rs  async_specializer.rs  async_specializer_borrowed.rs  async_specializer_borrowed_param.rs  async_specializer_borrowed_return.rs  cast_identity_borrowed.rs  lib.rs  specializer.rs  specializer_borrowed.rs  specializer_borrowed_param.rs  specializer_borrowed_return.rs
