[package]
name = "specializer"
version = "0.1.0"
edition = "2024"
description = """
Limited safe specialization on stable Rust with builder-like pattern
"""
license = "Apache-2.0 OR BSL-1.0 OR MIT"
documentation = "https://docs.rs/specializer"
homepage = "https://github.com/AldaronLau/specializer/releases"
repository = "https://github.com/AldaronLau/specializer"
readme = "README.md"
keywords = ["specialization", "specialize", "generics", "cast", "identity"]
categories = ["asynchronous", "no-std", "no-std::no-alloc", "rust-patterns"]
include = [
    "/LICENSE_APACHE",
    "/LICENSE_BOOST",
    "/LICENSE_MIT",
    "/README.md",
    "/src/*",
    "/examples/*",
]
rust-version = "1.85"

[dev-dependencies.pasts]
version = "0.14.3"
